2007-11-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/rel_nl.py: new half sibling types
	* src/plugins/rel_it.py: new half sibling types
	* src/Relationship.py: change the sibling type to distinguish
	side of relation. Correct bug in sibling type determination.

2007-11-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/_RelationView.py: tooltip cleanup, see also #256

2007-11-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/all_relations.py: remove unnecessary import
	* src/plugins/siblings.py: add sibling relation if not normal
	* src/Relationship.py: improve sibling type calculation
	Issue #1323

2007-11-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: key for gen search depth
	* src/GrampsCfg.py: Gramps preferences allows to set search depth
			of relationship.
	* src/Relationship.py: methods to change generation depth of search
	* src/plugins/rel_fr.py: remove depth use
	* src/plugins/all_relations.py: use depth, correct remark print error
	* src/plugins/rel_pl.py: remove depth use
	* src/DisplayState.py: hook to change relclass depth from GrampsCfg
	See also issue #1290

2007-11-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: remove old methods that are no longer used,
	get_relationship() and get_relationship_distance()

2007-11-22 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/relcalc.glade: don't do connect in glade, we need key
	* src/plugins/Leak.py: use os.sep, not + '/'
	* src/plugins/RelCalc.py: Don't keep recalculating relation map of the
	active person, do it once. 50% faster. Make sure all objects can be
	collected by the garbage collector
	* src/Relationship.py: allow to connect to database. Map of first 
	person is stored, only to be removed if database changed, or it
	concerns a different person. This reduces calculation with 50%